syntax = "proto3";

package pb;

option go_package = "./pb";

import "pb/auth_request.proto";
import "pb/auth_response.proto";

// AuthService definition
service AuthService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);
  rpc SignIn(SignInRequest) returns (SignInResponse);
}
